--- a/app/src/main/res/layout/random_activity.xml
+++ b/app/src/main/res/layout/random_activity.xml
@@ -1,6 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".RandomActivity"
+    android:background="@color/dark_background"
+    android:orientation="vertical" >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/show_random"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="@color/accent"
+        android:textSize="160sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/min_num"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:hint="@string/min_num"
+            android:textAlignment="center"
+            android:background="@drawable/rounded_corners"
+            android:textColor="@color/foreground"
+            android:textColorHint="@color/light_foreground"
+            android:inputType="number"
+            android:autofillHints="100" />
+
+        <EditText
+            android:id="@+id/max_num"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:hint="@string/max_num"
+            android:textAlignment="center"
+            android:background="@drawable/rounded_corners"
+            android:textColorHint="@color/light_foreground"
+            android:textColor="@color/foreground"
+            android:inputType="number"
+            android:autofillHints="0" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/random_get"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/background"
+        android:text="@string/get_random"
+        android:textColor="@color/foreground"
+        tools:layout_editor_absoluteX="8dp"
+        android:onClick="random_create"/>
+</LinearLayout>
