--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,6 +4,8 @@
         <item name="colorPrimary">@color/dark_background</item>
         <item name="colorPrimaryVariant">@color/background</item>
         <item name="colorOnPrimary">@color/foreground</item>
+        <item name="colorOnSurface">@color/dark_background</item>
+        <item name="colorSurface">@color/accent</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/accent</item>
         <item name="colorSecondaryVariant">@color/accent</item>
