--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="dark_background">#FF0C1115</color>
     <color name="background">#FF11171D</color>
     <color name="accent">#FFD7C1ED</color>
+    <color name="light_foreground">#A8A8A8</color>
 </resources>
