--- a/app/src/main/res/layout/stop_activity.xml
+++ b/app/src/main/res/layout/stop_activity.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/dark_background"
+    android:orientation="vertical"
+    tools:context=".StopActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/show_count_down"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="00:00"
+        android:textAlignment="center"
+        android:textColor="@color/accent"
+        android:textSize="80sp"
+        android:textStyle="bold" />
+
+    <Button
+    android:id="@+id/count_down"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/background"
+    android:onClick="countDown"
+    android:text="@string/count_down"
+    android:textColor="@color/foreground"
+    tools:layout_editor_absoluteX="8dp" />
+</LinearLayout>
