--- a/app/src/main/res/layout/stop_activity.xml
+++ b/app/src/main/res/layout/stop_activity.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context=".StopActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/show_count_down"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -17,8 +17,23 @@
         android:text="00:00"
         android:textAlignment="center"
         android:textColor="@color/accent"
+        android:background="@null"
         android:textSize="80sp"
         android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/count_down_value"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_margin="8dp"
+        android:layout_gravity="center"
+        android:hint="@string/count_in_minute"
+        android:textAlignment="center"
+        android:background="@drawable/rounded_corners"
+        android:textColorHint="@color/light_foreground"
+        android:textColor="@color/foreground"
+        android:inputType="number"
+        android:autofillHints="Minutes, Kek!" />
 
     <Button
     android:id="@+id/count_down"
