Get ready for 2.0

--- a/app/src/main/res/layout/stop_activity.xml
+++ b/app/src/main/res/layout/stop_activity.xml
@@ -35,13 +35,31 @@
         android:inputType="number"
         android:autofillHints="Minutes, Kek!" />
 
-    <Button
-    android:id="@+id/count_down"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:backgroundTint="@color/background"
-    android:onClick="countDown"
-    android:text="@string/count_down"
-    android:textColor="@color/foreground"
-    tools:layout_editor_absoluteX="8dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/stop_count_down"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
+            android:onClick="stop_countDown"
+            android:backgroundTint="@color/background"
+            android:text="@string/reset_countDown"
+            android:textColor="@color/foreground" />
+
+        <Button
+            android:id="@+id/start_count_down"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
+            android:backgroundTint="@color/background"
+            android:onClick="start_countDown"
+            android:text="@string/count_down"
+            android:textColor="@color/foreground" />
+    </LinearLayout>
 </LinearLayout>
