--- a/app/src/main/res/layout/date_activity.xml
+++ b/app/src/main/res/layout/date_activity.xml
@@ -18,8 +18,7 @@
         android:textColor="@color/foreground"
         android:gravity="center"
         android:textSize="40dp"
-        android:textStyle="bold"
-        android:onClick="random_create"/>
+        android:textStyle="bold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="YYYY"
+            android:text="YYYY,"
             android:textAlignment="center"
             android:textColor="@color/accent"
             android:textSize="50sp"
@@ -46,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="MM"
+            android:text="MM,"
             android:textAlignment="center"
             android:textColor="@color/accent"
             android:textSize="50sp"
