--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="foreground">#FFDECCED</color>
+    <color name="foreground">#FFE2E8EE</color>
     <color name="dark_background">#FF0C1115</color>
     <color name="background">#FF11171D</color>
     <color name="accent">#FFD7C1ED</color>
+    <color name="light_accent">#FFB5E8E0</color>
     <color name="light_foreground">#A8A8A8</color>
 </resources>
