last commit for this pain in as* project I hope

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,4 +138,14 @@
                 android:textStyle="bold|italic" />
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/accent"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/credit"
+        android:onClick="go_credit"
+        android:backgroundTint="@color/background"/>
 </LinearLayout>
